<resources>
    <string name="app_name">ISS Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Iss Tracker</string>
    <string name="nav_header_subtitle">https://github.com/Uniquex/ISS_Tracker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="observations">Observations</string>
    <string name="add_observation">Add Observation</string>
    <string name="current_crew">Astronauts</string>
    <string name="current_location">Current location</string>
    <string name="future_pass_times">Future pass times</string>
    <string name="trivia_n_facts">Trivia and Facts</string>
    <string name="no_observations">No observations found</string>
    <string name="draw_marker_options_title">ISS</string>
    <string name="draw_marker_options_snippet">ISS 2</string>
    <string name="trivia_s">Trivia</string>
    <string name="trivia">The International Space Station (ISS) is a space station, or a habitable artificial satellite, in low Earth orbit. Its first component launched into orbit in 1998, with the first long-term residents arriving in November 2000. The last pressurised module was fitted in 2011, and an experimental inflatable space habitat was added in 2016. The station is expected to operate until 2030. Development and assembly of the station continues, with several new elements scheduled for launch in 2019. ISS components have been launched by Russian Proton and Soyuz rockets, and American Space Shuttles.</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="iss_facts">Facts</string>
    <string name="launch">20 November 1998</string>
    <string name="launch_s">Launch</string>
    <string name="mass">≈ 419,725 kg</string>
    <string name="mass_s">Mass</string>
    <string name="size">72.8 m x 108.5 m x ≈20 m</string>
    <string name="size_s">Size</string>
    <string name="volume">931.57 m3</string>
    <string name="volume_s">Volume</string>
    <string name="perigee">403 km</string>
    <string name="perigee_s">Perigee</string>
    <string name="apogee">408 km</string>
    <string name="apogee_s">Apogee</string>
    <string name="orbital_speed">7.66 km/s</string>
    <string name="orbital_speed_s">Orbital speed</string>
    <string name="orbits_per_day">15.54</string>
    <string name="orbits_per_day_s">Orbits per day</string>
    <string name="orbit_period">92.68 min</string>
    <string name="orbit_period_s">Orbit period</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="next_pass_times">Next pass:</string>
</resources>
