<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/facts"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.facts.FactsFragment">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/issImage"
            android:layout_width="wrap_content"
            android:layout_height="80pt"
            android:scaleType="centerCrop"
            android:src="@drawable/main_iss"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.design.card.MaterialCardView
            android:id="@+id/CardTrivia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/issImage"
            card_view:cardBackgroundColor="@color/colorAccent">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/iss_trivia_s"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:text="@string/trivia_s"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/iss_trivia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trivia"
                    android:textColor="@android:color/white"
                    app:layout_constraintTop_toBottomOf="@id/iss_trivia_s" />

            </android.support.constraint.ConstraintLayout>


        </android.support.design.card.MaterialCardView>

        <android.support.design.card.MaterialCardView
            android:id="@+id/CardFacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/CardTrivia"
            card_view:cardBackgroundColor="@color/colorAccent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/factsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/issFacts"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:text="@string/iss_facts"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@id/issFacts">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/launch_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/launch_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/launch"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/launch"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/launch_s" />
                    </android.support.constraint.ConstraintLayout>

                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_1">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/mass_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/mass_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/mass"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/mass"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/mass_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_2">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/size_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/size_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/size"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/size"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/size_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_3">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/volume_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/volume_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/volume"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/volume"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/volume_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_4">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/perigee_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/perigee_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/perigee"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/perigee"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/perigee_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_5">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/apogee_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/apogee_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/apogee"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/apogee"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/apogee_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_6">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbital_speed_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbital_speed_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbital_speed"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbital_speed"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/orbital_speed_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_7">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbits_per_day_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbits_per_day_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbits_per_day"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbits_per_day"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/orbits_per_day_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>

                <android.support.design.card.MaterialCardView
                    android:id="@+id/facts_card_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2pt"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/facts_card_8">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/facts9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbit_period_s"
                            android:layout_width="50pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbit_period_s"
                            android:textColor="@android:color/white" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/orbit_period"
                            android:layout_width="100pt"
                            android:layout_height="wrap_content"
                            android:layout_margin="8pt"
                            android:text="@string/orbit_period"
                            android:textColor="@android:color/white"
                            app:layout_constraintLeft_toRightOf="@id/orbit_period_s" />
                    </android.support.constraint.ConstraintLayout>
                </android.support.design.card.MaterialCardView>


            </android.support.constraint.ConstraintLayout>
        </android.support.design.card.MaterialCardView>

    </android.support.constraint.ConstraintLayout>


</ScrollView>

