<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".AddObservation">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/colorDarkGrey">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/date"
                    android:layout_width="100dp"
                    android:hint="@string/date"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="date"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/time"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="time"
                    android:textColor="@android:color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>



        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lonlat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_date"
            app:cardBackgroundColor="@color/colorDarkGrey">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lat"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lat"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lon"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/lon"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@android:color/white"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintLeft_toRightOf="@+id/lat"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_lonlat"
            app:cardBackgroundColor="@color/colorDarkGrey">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_recylcer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_note"
            app:cardBackgroundColor="@color/colorDarkGrey">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_addImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="add Image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_images"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@android:color/white"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@id/cv_recylcer"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
